--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "daisyui": "^2.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.0.1"
+    "swr": "^2.0.1",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
