--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "swr": "^2.0.1",
     "zustand": "^4.3.2"
   },
