--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.3",
     "daisyui": "^2.47.0",
+    "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.0",
     "swr": "^2.0.1",
     "zustand": "^4.3.2"
