--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.0",
+    "recharts": "^2.4.3",
     "swr": "^2.0.1",
     "zustand": "^4.3.2"
   },
