--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.3",
     "daisyui": "^2.47.0",
+    "dotenv": "^16.0.3",
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
