test docker compose file and motify

--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -5,7 +5,6 @@ events { }
 http {
   server {
     listen 80;
-
     # Requests starting with root (/) are handled
     location / {
       # The following 3 lines are required for the hot loading to work (websocket).
@@ -13,16 +12,15 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
 
-      # Requests are directed to http://localhost:3000
-      proxy_pass http://vote-frontend:3000;
+      proxy_pass http://vote-frontend:5173;
     }
         # Requests starting with /api/ are handled
-    location /api/ {
+    location /api/v1/ {
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
 
-      proxy_pass http://vote-backend:3000/;
+      proxy_pass http://vote-backend:8080;
 
     }
   }
