--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,10 +5,11 @@ services:
     ports:
       - "3307:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: vote
+      MYSQL_ROOT_PASSWORD: nE5kMc7JCGNqwDQN
       MYSQL_USER: yyx
-      MYSQL_PASSWORD: 123456Aa@
-      MYSQL_ROOT_HOST: '%'
+      MYSQL_PASSWORD: nE5kMc7JCGNqwDQN
+
   vote-backend:
     image: vote-backend
     build:
@@ -16,9 +17,11 @@ services:
       dockerfile: dev.Dockerfile
     container_name: vote-backend
     environment:
-      - spring.datasource.url=jdbc:mysql://mysqldb:3307/vote
+      - spring.datasource.url=jdbc:mysql://mysqldb:3306/vote
+      - spring.datasource.password=nE5kMc7JCGNqwDQN
+      - server.error.whitelabel.enabled=false
     depends_on:
-      - vote-mysqldb
+      - mysqldb
   vote-frontend:
     image: vote-frontend
     build:
@@ -26,7 +29,7 @@ services:
       dockerfile: dev.Dockerfile
     container_name: vote-frontend
     environment:
-      - VITE_BACKEND_URL=http://vote-backend:8080/api/v1
+      - VITE_BACKEND_URL=http://localhost:3001/api/v1
     depends_on:
       - vote-backend
   nginx:
@@ -39,4 +42,4 @@ services:
     depends_on:
       - vote-frontend
       - vote-backend
-# todo test compose
+      # fixme 403 invaild cors request
