--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -20,7 +20,7 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
 
-      proxy_pass http://vote-backend:8080;
+      proxy_pass http://vote-backend:8080/;
 
     }
   }
