--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.47.0",
     "dotenv": "^16.0.3",
     "immer": "^9.0.19",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
